[package]
name = "advent-of-code-2019"
version = "0.1.0"
authors = ["carlm"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
rayon = "1.2"
itertools = "0.8"
num_enum = "0.4"

[features]
# Change the default flags to "debugging" and we compile in all of our debugging output
default = []
debugging = []